--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": "^7.2 || ^8.0",
-        "symfony/framework-bundle": "^4.4.20 || ^5.2.5",
-        "symfony/validator": "^4.4.20 || ^5.2.5",
-        "symfony/translation": "^4.4.20 || ^5.2.5",
-        "symfony/twig-bundle": "^4.4.20 || ^5.2.4",
+        "symfony/framework-bundle": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/validator": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/translation": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/twig-bundle": "^4.4.20 || ^5.2.4 || ^6.0",
         "symfony/finder": "^4.4.20 || ^5.2.4",
         "symfony/intl": "^4.4.20 || ^5.2.4",
 
@@ -22,7 +22,7 @@
         "php-translation/extractor": "^2.0",
         "nyholm/nsa": "^1.1",
         "twig/twig": "^2.14.4 || ^3.3",
-        "symfony/asset": "^4.4.20 || ^5.2.4"
+        "symfony/asset": "^4.4.20 || ^5.2.4 || ^6.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.2",
@@ -31,10 +31,10 @@
         "php-http/curl-client": "^1.7 || ^2.0",
         "php-http/message": "^1.11",
         "php-http/message-factory": "^1.0.2",
-        "symfony/console": "^4.4.20 || ^5.2.5",
-        "symfony/twig-bridge": "^4.4.20 || ^5.2.5",
-        "symfony/dependency-injection": "^4.4.20 || ^5.2.5",
-        "symfony/web-profiler-bundle": "^4.4.20 || ^5.2.4",
+        "symfony/console": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/twig-bridge": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/dependency-injection": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.4.20 || ^5.2.4 || ^6.0",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "matthiasnoback/symfony-config-test": "^4.1",
         "nyholm/psr7": "^1.1",
