--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
         "symfony/framework-bundle": "^4.4.20 || ^5.2.5 || ^6.0",
         "symfony/validator": "^4.4.20 || ^5.2.5 || ^6.0",
         "symfony/translation": "^4.4.20 || ^5.2.5 || ^6.0",
-        "symfony/twig-bundle": "^4.4.20 || ^5.2.4 || ^6.0",
-        "symfony/finder": "^4.4.20 || ^5.2.4",
-        "symfony/intl": "^4.4.20 || ^5.2.4",
+        "symfony/twig-bundle": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/finder": "^4.4.20 || ^5.2.5 || ^6.0",
+        "symfony/intl": "^4.4.20 || ^5.2.5 || ^6.0",
 
         "php-translation/symfony-storage": "^2.1",
         "php-translation/extractor": "^2.0",
         "nyholm/nsa": "^1.1",
         "twig/twig": "^2.14.4 || ^3.3",
-        "symfony/asset": "^4.4.20 || ^5.2.4 || ^6.0"
+        "symfony/asset": "^4.4.20 || ^5.2.5 || ^6.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.2",
@@ -34,7 +34,7 @@
         "symfony/console": "^4.4.20 || ^5.2.5 || ^6.0",
         "symfony/twig-bridge": "^4.4.20 || ^5.2.5 || ^6.0",
         "symfony/dependency-injection": "^4.4.20 || ^5.2.5 || ^6.0",
-        "symfony/web-profiler-bundle": "^4.4.20 || ^5.2.4 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.4.20 || ^5.2.5 || ^6.0",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "matthiasnoback/symfony-config-test": "^4.1",
         "nyholm/psr7": "^1.1",
